--- a/style.css
+++ b/style.css
@@ -162,8 +162,9 @@ blockquote {
 
 .action {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
+    gap: 100px;
     width: 70%;
     height: 150px;
     background-color: #3b82f6;
@@ -189,4 +190,8 @@ footer {
 img {
     width: 100%;
     height: 100%;
+}
+
+.text {
+    color: white;
 }
